--- a/GE.WebUI/Content/less/list-news.less
+++ b/GE.WebUI/Content/less/list-news.less
@@ -91,6 +91,12 @@
     font-size:18px;
 }
 
+.list-news .content > .g-img{
+    display:block;
+    max-height: 20px;
+    margin-top:10px;
+}
+
 .list-news .content .link {
     font-size: 22px;
     color: @color-dark-blue;
