--- a/GE.WebAdmin/Views/Home/Index.cshtml
+++ b/GE.WebAdmin/Views/Home/Index.cshtml
@@ -1,3 +1,5 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
+
+<h3>Добро пожаловать на борт <span class="text-primary">@Constants.AppName</span>,<br /> @User.Identity.Name !</h3>
