--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -251,7 +251,7 @@
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
+                                <input type="text" class="form-control" placeholder="Поиск...">
                                 <span class="input-group-btn">
                                     <button class="btn btn-default" type="button">
                                         <i class="fa fa-search"></i>
@@ -261,10 +261,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-question fa-fw"></i> Помощь</a>
-                        </li>
-                        <li>
-                            <a href="index.html"><i class="fa fa-home fa-fw"></i> Главная</a>
+                            <a href="@Url.Action(MVC.Home.Index())"><i class="fa fa-home fa-fw"></i> Главная</a>
                         </li>
                         <li>
                             <a href="@Url.Action(MVC.Routes.Index())"><i class="fa fa-road fa-fw"></i> Маршруты</a>
