--- a/GE.WebUI/Views/Articles/_Preview.cshtml
+++ b/GE.WebUI/Views/Articles/_Preview.cshtml
@@ -9,7 +9,7 @@
         <div class="col-md-6">
             <div class="pv-article @(i == Model.Length - 1 ? "last" : null)">
                 <h5 class="title">
-                    <a href="@Url.Action(MVC.Articles.Details(m.TitleUrl))" target="_blank">@m.Title</a>
+                    <a href="@Url.Action(MVC.Articles.Details(m.DateCreate.Year, m.DateCreate.Month.ToString("00"), m.DateCreate.Day.ToString("00"), m.TitleUrl))" target="_blank">@m.Title</a>
                 </h5>
                 @Html.DisplayFor(x=>m.Info)
                 <p class="foreword">
