--- a/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
+++ b/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
@@ -7,6 +7,8 @@
         CommentsCount = Model.CommentsCount,
         ViewsCount = Model.ViewsCount
     };
+    
+    var url=Url.Action(MVC.News.Details(Model.DateCreate.Year, Model.DateCreate.Month.ToString("00"), Model.DateCreate.Day.ToString("00"), Model.TitleUrl));
 }
 
 <div class="row">
@@ -29,9 +31,9 @@
             {
                 <img class="g-img" alt="@Model.Game.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.Game.FrontPictureId, height: 80))" />
             }
-            <a class="link" href="@Url.Action(MVC.News.Details(Model.TitleUrl))">@Model.Title</a>
+            <a class="link" href="@url">@Model.Title</a>
             <p class="foreword">@Model.Foreword</p>
-            <a href="@Url.Action(MVC.News.Details(Model.TitleUrl))" class="btn btn-default btn-transparent dark-blue visible-xs">Подробнее</a>
+            <a href="@url" class="btn btn-default btn-transparent dark-blue visible-xs">Подробнее</a>
         </div>
     </div>
 </div>
