--- a/GE.WebUI/Views/Articles/_Collection.cshtml
+++ b/GE.WebUI/Views/Articles/_Collection.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SxExtantions.SxPagedCollection<Article>
 @{
     Layout = null;
+    var gameTitle = (string)ViewBag.GameTitle;
 }
 
 @if (Model.Length != 0)
@@ -8,7 +9,7 @@
     <div class="list-article-container">
         @Html.SxList(Model, new SxExtantions.SxListSettings { ColCount = 3, CellCssStyle = "list-article" })
         <div class="text-center">
-            @Html.SxPager(Model.PagerInfo, pageUrl: (x) => Url.Action(MVC.Articles.List(game: (string)ViewBag.GameTitle, page: x)), isAjax: false, htmlAttributes: new { @class = "pagination" })
+            @Html.SxPager(Model.PagerInfo, pageUrl: (x) => Url.Action("list", new { gameTitle=gameTitle, page=x}), isAjax: false, htmlAttributes: new { @class = "pagination" })
         </div>
     </div>
 }
