--- a/GE.WebUI/Views/Games/_GameList.cshtml
+++ b/GE.WebUI/Views/Games/_GameList.cshtml
@@ -10,7 +10,7 @@
         <div class="container">
             <ul>
                 <li style="width:@(length + "%")" @(gameName == null ? "class=active" : null)>
-                    <a href="@(controllerName != "home" ? Url.Action(actionName, new { controller = controllerName, game = "" }) : "/")" title="Показать все" data-toggle="tooltip" data-placement="bottom" class="red-tooltip">
+                    <a href="@(controllerName != "home" ? Url.Action(actionName, new { controller = controllerName, gameTitle = "" }) : "/")" title="Показать все" data-toggle="tooltip" data-placement="bottom" class="red-tooltip">
                         <img alt="Показать все" src="@(Model.EmptyGame.IconPath)" />
                     </a>
                 </li>
@@ -19,7 +19,7 @@
                 {
                     var item = Model.Games[i];
                     <li style="width:@(length + "%")" @(item.Title.ToLower() == gameName ? "class=active" : null)>
-                        <a href="@Url.Action(actionName, new { controller = controllerName, game = item.Title })" title="@item.Title" data-toggle="tooltip" data-placement="bottom" class="red-tooltip ">
+                        <a href="@Url.Action(actionName, new { controller=controllerName, gameTitle = item.Title })" title="@item.Title" data-toggle="tooltip" data-placement="bottom" class="red-tooltip ">
                             <img alt="@item.Title" src="@Url.Action(MVC.Pictures.Picture(item.FrontPictureId, height: 80))" />
                             <span class="visible-xs">@item.Title</span>
                         </a>
