--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -344,6 +344,9 @@
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
+                        <li>
+                            <a href="@Url.Action(MVC.Manuals.Index())"><i class="fa fa-tasks fa-fw"></i> FAQ</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
