--- a/GE.WebAdmin/Views/Redirects/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Redirects/_GridView.cshtml
@@ -9,7 +9,7 @@
 @Html.SxGridView(
             new SxExtantions.SxGridViewSettings<VMRedirect>
     {
-        UpdateTargetId = "grid-request",
+        UpdateTargetId = "grid-301-redirect",
         Data = Model,
         Columns = new SxExtantions.SxGridViewColumn[]{
             new SxExtantions.SxGridViewColumn{FieldName="OldUrl", Caption="Старый адрес"},
