--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
     <div class="wrapper">
         @Html.Action(MVC.Games.GameList())
         <div class="container">
+            @if (ViewBag.H1 != null)
+            {
+                <h1 @(ViewBag.H1CssClass != null ? "class=" + ViewBag.H1CssClass : null)>@ViewBag.H1</h1>
+            }
             @RenderBody()
         </div>
     </div>
@@ -55,4 +59,5 @@
     </script>
     @RenderSection("scripts", false)
 </body>
+
 </html>
