--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -2,6 +2,7 @@
 @import (reference) "sizes.less";
 
 @import "//fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=cyrillic,latin";
+@import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 html {
   position: relative;
@@ -18,6 +19,18 @@ body {
     position:fixed;
     width:100%;
     z-index:100;
+    @media (max-width: @screen-xs-max) {
+        position: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .wrapper {
