--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -19,7 +19,7 @@
 }
 
 .m-html {
-    margin-top: @def-pad*2;
+    margin-top: @def-pad * 2;
     background-color: @color-white;
     padding: @def-pad;
     display: inline-block;
@@ -75,6 +75,7 @@
     width:auto;
     @media (max-width: @screen-xs-max) {
         float:left;
+        margin-top:@def-pad;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -84,5 +85,27 @@
     }
 
     @media (min-width: @screen-lg-min) {
+        margin-top:5px;
     }
+}
+
+.m-info .vote i{
+    font-size:1.5em;
+    cursor:pointer;
+}
+.m-info .vote i.up{
+    color:@color-green;
+}
+
+.m-info .vote i.down{
+    color:@color-red;
+}
+
+.m-info .vote span{
+    margin-left:10px;
+    font-size:1.5em;
+}
+
+.m-info .vote span.up{
+    margin-right:@def-pad*2;
 }
