--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -1,12 +1,4 @@
-﻿@model News
-@{
-    var info = new VMMateriallnfo
-    {
-        DateCreate = Model.DateCreate,
-        CommentsCount = Model.CommentsCount,
-        ViewsCount = Model.ViewsCount
-    };
-}
+﻿@model VMDetailNews
 
 <div class="detail-news">
     @Html.Partial(MVC.Shared.Views._Breadcrumbs, (VMBreadcrumb[])ViewBag.Breadcrumbs)
@@ -23,11 +15,11 @@
     <div class="m-info">
         <div class="row">
             <div class="col-md-6">
-                sdsd
+                @Html.Partial(MVC.Votes.Views._Vote, Model.Info)
             </div>
             <div class="col-md-6">
                 <div class="text-right">
-                    @Html.DisplayFor(x => info)
+                    @Html.DisplayFor(x => Model.Info)
                 </div>
             </div>
         </div>
