--- a/GE.WebUI/Views/Articles/_Preview.cshtml
+++ b/GE.WebUI/Views/Articles/_Preview.cshtml
@@ -1,24 +1,31 @@
 ﻿@model VMPreviewArticle[]
 @{
     Layout = null;
+    var colCount = 2;
+    var rowsCount = (int)Math.Ceiling((decimal)Model.Length / colCount);
 }
-<div class="row">
-    @for (int i = 0; i < Model.Length; i++)
-    {
-        var m = Model[i];
-        <div class="col-md-6">
-            <div class="pv-article @(i == Model.Length - 1 ? "last" : null)">
-                <h5 class="title">
-                    <a href="@Url.Action(MVC.Articles.Details(m.DateCreate.Year, m.DateCreate.Month.ToString("00"), m.DateCreate.Day.ToString("00"), m.TitleUrl))" target="_blank">@m.Title</a>
-                </h5>
-                @Html.DisplayFor(x=>m.Info)
-                <p class="foreword">
-                    @m.Foreword
-                </p>
+
+@for (int y = 0; y < rowsCount; y++)
+{
+    var rows = Model.Skip(y * colCount).Take(colCount).ToArray();
+    <div class="row">
+        @for (int i = 0; i < rows.Length; i++)
+        {
+            var m = rows[i];
+            <div class="col-md-6">
+                <div class="pv-article">
+                    <h5 class="title">
+                        <a href="@Url.Action(MVC.Articles.Details(m.DateCreate.Year, m.DateCreate.Month.ToString("00"), m.DateCreate.Day.ToString("00"), m.TitleUrl))" target="_blank">@m.Title</a>
+                    </h5>
+                    @Html.DisplayFor(x => m.Info)
+                    <p class="foreword">
+                        @m.Foreword
+                    </p>
+                </div>
             </div>
-        </div>
-    }
-</div>
+        }
+    </div>
+}
 <div class="text-center">
     <button class="btn btn-default btn-transparent red">Все записи</button>
 </div>
