--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -46,7 +46,7 @@ body {
 }
 
 .btn-transparent {
-    padding: @def-pad + 5px 0;
+    padding: 19px 0;
     text-transform: uppercase;
     font-weight: 700;
     min-width:200px;
