--- a/GE.WebUI/Views/Shared/DisplayTemplates/VMMateriallnfo.cshtml
+++ b/GE.WebUI/Views/Shared/DisplayTemplates/VMMateriallnfo.cshtml
@@ -5,7 +5,7 @@
 
 <ul class="mat-info">
     <li>
-        <i class="fa fa-clock-o"></i>: @(((DateTime)Model.DateCreate).ToString("dd.MM.yyy"))
+        <i class="fa fa-clock-o"></i>: @(Model.DateOfPublication.ToString("dd.MM.yyy"))
     </li>
     <li>
         <i class="fa fa-eye"></i>: @Model.ViewsCount
