--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -264,6 +264,17 @@
                             <a href="@Url.Action(MVC.Home.Index())"><i class="fa fa-home fa-fw"></i> Главная</a>
                         </li>
                         <li>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Система доступа<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="@Url.Action(MVC.Account.UserList())"><i class="fa fa-fw fa-users"></i> Пользователи</a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action(MVC.Roles.Index())"><i class="fa fa-fw fa-street-view"></i> Роли</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <a href="@Url.Action(MVC.Routes.Index())"><i class="fa fa-road fa-fw"></i> Маршруты</a>
                         </li>
                         <li>
